Added the rest of the recipes links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="alfredo.html">Alfredo</a>
+        <a href="lasagna.html">Lasagna</a>
+        <a href="penne-rosa.html">Penne Rosa</a>
+
     </body>
 </html>
