Updated each page with correspoding pictures

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Alfredo</title>
+        <title>Lasagna</title>
     </head>
     <body>
-        <h1>Alfredo</h1>
-            <img src="../alfredo.webp" alt="Image of Alfredo">
+        <h1>Lasagna</h1>
+            <img src="../lasagna.jpg" alt="Image of Lasagna">
             <p>This recipe is a very yummy, creamy.. recipe. <br> 
             Lorem ipsum dolor sit amet consectetur adipisicing<br>
              elit. Dicta ipsa iste architecto quo consequatur at <br>
