--- a/recipes/penne-rosa.html
+++ b/recipes/penne-rosa.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Alfredo</title>
+        <title>Penne Rosa</title>
     </head>
     <body>
-        <h1>Alfredo</h1>
-            <img src="../alfredo.webp" alt="Image of Alfredo">
+        <h1>Penne Rosa</h1>
+            <img src="../penne-rosa.jpg" alt="Image of Penne Rosa">
             <p>This recipe is a very yummy, creamy.. recipe. <br> 
             Lorem ipsum dolor sit amet consectetur adipisicing<br>
              elit. Dicta ipsa iste architecto quo consequatur at <br>
