Fixed broken images

--- a/recipes/alfredo.html
+++ b/recipes/alfredo.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Alfredo</h1>
-            <img src="../alfredo.webp" alt="Image of Alfredo">
+            <img src="../images/alfredo.webp" alt="Image of Alfredo">
             <p>This recipe is a very yummy, creamy.. recipe. <br> 
             Lorem ipsum dolor sit amet consectetur adipisicing<br>
              elit. Dicta ipsa iste architecto quo consequatur at <br>
