--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Lasagna</h1>
-            <img src="../lasagna.jpg" alt="Image of Lasagna">
+            <img src="../images/lasagna.jpg" alt="Image of Lasagna">
             <p>This recipe is a very yummy, creamy.. recipe. <br> 
             Lorem ipsum dolor sit amet consectetur adipisicing<br>
              elit. Dicta ipsa iste architecto quo consequatur at <br>
