--- a/recipes/penne-rosa.html
+++ b/recipes/penne-rosa.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Penne Rosa</h1>
-            <img src="../penne-rosa.jpg" alt="Image of Penne Rosa">
+            <img src="../images/penne-rosa.jpg" alt="Image of Penne Rosa">
             <p>This recipe is a very yummy, creamy.. recipe. <br> 
             Lorem ipsum dolor sit amet consectetur adipisicing<br>
              elit. Dicta ipsa iste architecto quo consequatur at <br>
