--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="alfredo.html">Alfredo</a>
-        <a href="lasagna.html">Lasagna</a>
-        <a href="penne-rosa.html">Penne Rosa</a>
+        <a href="recipes/alfredo.html">Alfredo</a>
+        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/penne-rosa.html">Penne Rosa</a>
 
     </body>
 </html>
